crates/core/tests/compile_fail/tuple_struct.rs
use sutures::Seam;

#[derive(Seam)]
struct Bad(String, i32);

fn main() {}
