crates/core/tests/compile_fail/tuple_struct.stderr
error: Seam only supports structs with named fields
 --> tests/compile_fail/tuple_struct.rs:4:8
  |
4 | struct Bad(String, i32);
  |        ^^^
